fix: tag color contrast

--- a/extensions/mentions/less/forum.less
+++ b/extensions/mentions/less/forum.less
@@ -38,7 +38,7 @@
   }
 }
 .GroupMention {
-  background-color: var(--group-color, var(--control-bg));
+  background-color: var(--color, var(--control-bg));
   color: var(--control-color);
   --link-color: currentColor;
 
